--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,11 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Hermanas Misioneras de San Francisco Javier",
+  "name": "Somos un Instituto religioso fundado en Argentina, en la localidad de Vila Raffo, partido de Tres de Febrero, diócesis de San Martin, provincia de Buenos Aires por la Sierva de Dios Madre Isabel Fernández del Carmen que nace para dar testimonio de Cristo en las misiones tanto rurales como en las grandes ciudades; en la atención a los más necesitados y a los enfermos.",
   "icons": [
     {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
     }
   ],
   "start_url": ".",
